Version 0.8
Fix work protocol on bigendian   
Change message window button to tolbar
Change configure for FreeBSD
Change font saving
Use KExtendedSocket on KDE
Add HTTPS proxy support
Make abstract interface for socket
Fix receive messages from ICQLite
Fix drag-and-drop files 
Fix user encoding for encode/decode RTF 
Add process escape for close user window
Fix set status for icq2go
Fix save options "Alert if Away" and "Require authorization"

Version 0.7
Sending of the messages to several users added
Add message forwarding
Add autosplit SMS messages
Add support keyboard shortcuts
Add On-Screen display notification about messages and user status
Work with a history is improved, the speed is increased, search and adjustments is added
Add message mode for user window
Is corrected batch file transfer, transfer of several files and recursive directoryes now works
Direct connection with ICQ-clones is corrected
Add support secure direct connection with SIM and Licq
Add support user encoding
Fix bug with receive bug server-side contact list
Add spam filter

Version 0.6
Proxy support added (SOCKS4, SOCKS5, HTTP)
Germany translation added
Add miranda icon themes support (see README for details)
Add save flag "Close on send"
Fix bug with KCmdLineArgs, SIM may crash on start
Fix bug on update timezone - SIM may crash after logon
Fix compile on gcc 3.1

Version 0.5 (25.06.2002)

The chat support added.
List of attributes for search of the user is extended
And some others fixes:
- The processing of network mistakes is corrected, resulted in that that on the 
  broken off connection could work very long, thus loading strongly enough 
  processor (the very unpleasant mistake was - on windows could result in 
  crash of system)
- The effect "strange sound" is corrected, that is it was really started to 
  play twice
- Are corrected acinclude - now normally is going on KDE 2 and does not require 
  of a key - disable-kde if KDE is not present 

Version 0.4 (11.06.2002)
