@@ -1007,6 +1007,7 @@ static bool initFlash = false;
 
 void UserBox::slotMessageReceived(ICQMessage *msg)
 {
+    if (msg->Type() == ICQ_MSGxSTATUS) return;
     if (qApp->activeWindow() != this){
         if (haveUser(msg->getUin()))
             emit messageReceived(msg);
@@ -1032,7 +1033,7 @@ void UserBox::slotMessageReceived(ICQMessage *msg)
             ((msg->Type() == ICQ_MSGxMSG) || (msg->Type() == ICQ_MSGxURL) ||
              (msg->Type() == ICQ_MSGxSMS))){
         pClient->markAsRead(msg);
-	emit messageReceived(msg);
+        emit messageReceived(msg);
         return;
     }
     if (!haveUser(msg->getUin())) return;
